--- a/views/css/styleShowMovies.css
+++ b/views/css/styleShowMovies.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url('../img/fondo.jpg');
+    background-image: url('../img/fondo1.jpg');
     background-attachment: fixed;
     background-size: 100%;
 }
