--- a/views/css/generalStyleOfab.css
+++ b/views/css/generalStyleOfab.css
@@ -5,8 +5,8 @@
 
 body {
     background-image: url('../img/fondo3.jpg');
-    background-size: 80%;
-    background-attachment: local;
+    background-size: 100%;
+    background-attachment: fixed;
 }
 
 .form {
