--- a/views/css/generalStyleOfab.css
+++ b/views/css/generalStyleOfab.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url('../img/fondo3.jpg');
+    background: #ffffff;
     background-size: 100%;
     background-attachment: fixed;
 }
@@ -19,6 +19,10 @@ body {
     background-color: rgba(255,255,255,0.2);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border: 10px double rgba(0, 0, 0, 0.2);
+    color: #255784;
+    background: #2195f32a;
+    transition-delay: 1s;
+    box-shadow: 0 0 10px #2195f32a, 0 0 40px #2195f32a, 0 0 80px #2195f32a, 0 0 120px #2195f32a;
 }
 
 label {
