--- a/views/css/theaterListStyle.css
+++ b/views/css/theaterListStyle.css
@@ -4,65 +4,89 @@
 }
 
 body {
-    background: #878a03;
+    background: #010127fd;
+    background-size: 100%;
+    background-attachment: fixed;
 }
 
-table {
+.form {
     text-align: center;
     float: center;
-    width:750px;
-	height: 200px;
-	margin: auto auto 60px auto;
+    width:600px;
+	margin: 80px 500px 200px 400px;
 	padding: 30px;
-    background-color: #d0d30e;
+    background-color: rgba(255,255,255,0.2);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border: 10px double rgba(0, 0, 0, 0.2);
-    color: #000000;
+    color: #255784;
+    background: #2195f32a;
     transition-delay: 1s;
-    box-shadow: 0 0 10px #e5ff00, 0 0 40px #e5ff00, 0 0 80px #e5ff00, 0 0 120px #e5ff00;
+    box-shadow: 0 0 10px #2195f38f, 0 0 40px #2195f38f, 0 0 80px #2195f38f, 0 0 120px #2195f38f;
 }
 
-table th {
-    font-size: 25px !important; 
+table{
+  background: #092e4d2a;
+  width:500px;
+	height: 400px;
+
+	padding: 20px;
+}
+
+th{
+    text-decoration-color: aliceblue;
+    
+}
+
+label {
+    font-size: 30px !important; 
     font-weight: bold;
-    padding: 10px;
+    color: aliceblue;
 }
 
-table td {
-    font-size: 23px !important; 
-    font-weight: bold;
-    padding: 6px;
-    margin-top: 50px;
-}
-
-p{
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #000000;
-	font-size: 60px;
-    margin: 70px auto 50px auto;
-    transition-delay: 1s;
-    box-shadow: 0 0 10px #e5ff00a4, 0 0 40px #e5ff00a4, 0 0 80px #e5ff00a4, 0 0 120px #e5ff00a4;
+input {
+    margin: 10px;
+    width:400px;
+    font-size: 130%;
 }
 
 button {
-    background: #d0d30e;
+	padding: 2%;
+    background-color: rgba(255, 255, 255, 0.048);
+    border: 5px solid rgba(0, 0, 0, 0.5);
+    font-size: 30px !important; 
+    font-weight: bold;
+}
+
+button:hover{
+    background: #3b32325b;
+}
+
+.status{
+    float: right;
 }
 
 .boton {
     position: relative;
     display: inline-block;
-    color: #000000;
+    color: #2196f3;
     text-transform: uppercase;
     letter-spacing: 4px;
     text-decoration: none;
     overflow: hidden;
     transition: 0.2s;
-    background: #d0d30e;
+    margin: 5%;
+    background: #000;
     border: none;
     font-size: 30px !important; 
     font-weight: bold;
     padding: 2%;
+}
+
+.boton:hover{
+    color: #255784;
+    background: #2196f3;
+    transition-delay: 1s;
+    box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3, 0 0 120px #2196f3;
 }
 
 
@@ -77,7 +101,7 @@ button {
     left: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(90deg, transparent, #e5ff00a4);
+    background: linear-gradient(90deg, transparent, #2196f3);
 }
 
 .boton:hover span:nth-child(1){
@@ -91,7 +115,7 @@ button {
     right: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(270deg, transparent, #e5ff00a4);
+    background: linear-gradient(270deg, transparent, #2196f3);
 }
 
 .boton:hover span:nth-child(3){
@@ -106,7 +130,7 @@ button {
     right: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(180deg, transparent, #000000);
+    background: linear-gradient(180deg, transparent, #2196f3);
 }
 
 .boton:hover span:nth-child(2){
@@ -121,7 +145,7 @@ button {
     left: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(360deg, transparent, #000000);
+    background: linear-gradient(360deg, transparent, #2196f3);
 }
 
 .boton:hover span:nth-child(4){
