--- a/views/css/styleShowCinemas.css
+++ b/views/css/styleShowCinemas.css
@@ -4,8 +4,13 @@
 }
 
 body {
-    background: #878a03;
+   /* background: #878a03; */
+   background-image: url("../img/fondoNeon1.jpg");
+
+   background-size: 100%;
+   background-attachment: fixed;
 }
+
 
 table {
     text-align: center;
@@ -14,18 +19,24 @@ table {
 	height: 200px;
 	margin: auto auto 60px auto;
 	padding: 30px;
-    background-color: #d0d30e;
+    background-color: rgba(255,255,255,0.2);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border: 10px double rgba(0, 0, 0, 0.2);
-    color: #000000;
+    color: #ffffff;
     transition-delay: 1s;
-    box-shadow: 0 0 10px #e5ff00, 0 0 40px #e5ff00, 0 0 80px #e5ff00, 0 0 120px #e5ff00;
+    box-shadow: 0 0 10px #2195f3d2, 0 0 40px #2195f3d2, 0 0 80px #2195f3d2, 0 0 120px #f321d7d2;
+   
 }
 
 table th {
     font-size: 25px !important; 
     font-weight: bold;
     padding: 10px;
+    letter-spacing: 2px;
+}
+
+table th:hover {
+    color: #21d4f3;
 }
 
 table td {
@@ -33,21 +44,25 @@ table td {
     font-weight: bold;
     padding: 6px;
     margin-top: 50px;
+    letter-spacing: 2px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+table td:hover{
+    color: #000000;
+    background: #21d4f3;
+    box-shadow: 0 0 10px #21d4f3, 0 0 40px #21d4f3, 0 0 80px #21d4f3, 0 0 120px #21d4f3;
 }
 
 p{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: #000000;
+    color: #ffffff;
 	font-size: 60px;
     margin: 70px auto 50px auto;
-    transition-delay: 1s;
-    box-shadow: 0 0 10px #e5ff00a4, 0 0 40px #e5ff00a4, 0 0 80px #e5ff00a4, 0 0 120px #e5ff00a4;
+   
 }
 
-button {
-    background: #d0d30e;
-}
 
 .boton {
     position: relative;
@@ -58,74 +73,10 @@ button {
     text-decoration: none;
     overflow: hidden;
     transition: 0.2s;
-    background: #d0d30e;
+    background: none;
     border: none;
     font-size: 30px !important; 
     font-weight: bold;
     padding: 2%;
 }
 
-
-.boton span{
-    position: absolute;
-    display: block;
-}
-
-/*arriba*/
-.boton span:nth-child(1){
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #e5ff00a4);
-}
-
-.boton:hover span:nth-child(1){
-    left: 100%;
-    transition: 1s;
-}
-
-/*abajo*/
-.boton span:nth-child(3){
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent, #e5ff00a4);
-}
-
-.boton:hover span:nth-child(3){
-    right: 100%;
-    transition: 1s;
-    transition-delay: 0.5s;
-}
-
-/*derecha*/
-.boton span:nth-child(2){
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, #000000);
-}
-
-.boton:hover span:nth-child(2){
-    top: 100%;
-    transition: 1s;
-    transition-delay: 0.25s;
-}
-
-/*izquierda*/
-.boton span:nth-child(4){
-    bottom: -100%;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(360deg, transparent, #000000);
-}
-
-.boton:hover span:nth-child(4){
-    bottom: 100%;
-    transition: 1s;
-    transition-delay: 0.75s;
-}
