--- a/views/css/styleShowMovies.css
+++ b/views/css/styleShowMovies.css
@@ -4,28 +4,31 @@
 }
 
 body {
-    background-image: url('../img/fondo1.jpg');
+    background-image: url('../img/fondoNeon1.jpg');
     background-attachment: fixed;
     background-size: 100%;
 }
 
 table {
-    text-align: center;
-    width:650px;
-	display: table-layout;
-	margin: auto auto 60px auto;
+    width:500px;
+    height: auto;
+	margin: 30px auto 60px auto;
 	padding: 20px;
-    background-color: rgba(228, 226, 236, 0.61);
+    background-color: rgba(255,255,255,0.2);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border: 10px double rgba(0, 0, 0, 0.2);
-    
+    letter-spacing: 1px;
+    transition-delay: 1s;
+    box-shadow:  0 0 40px #2195f3d2, 0 0 80px #2195f3d2, 0 0 120px #f321d7d2;
 }
 
 
 th {
     font-size: 25px !important; 
     font-weight: bold;
-    padding: 0%;
+    padding: 1%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    box-shadow:  0 0 10px #2195f3d2;
 }
 
 td {
@@ -34,18 +37,114 @@ td {
    display: table-cell;
     text-align: center;
     right: 120%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    box-shadow:  0 0 10px #2195f3d2;
 } 
+
+td:hover{
+    color: #347bff;
+}
 
 p{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: #ffffff;
 	font-size: 60px;
-	padding: 40px 40px 15px 40px;
+	padding: 60px 40px 15px 40px;
 }
 
 
 tr img{
    float: left;
    margin: 0 !important; 
+}
+
+/*button*/
+
+.boton {
+    position: relative;
+    display: inline-block;
+    color: #000000;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-decoration: none;
+    overflow: hidden;
+    transition: 0.2s;
+    background: none;
+    border: none;
+    font-size: 25px !important; 
+    font-weight: bold;
+    padding: 2%;
+}
+
+.boton:hover{
+    color: #0e2446;
+    background: #2196f3;
+    transition-delay: 1s;
+    box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3, 0 0 120px #2196f3;
+}
+
+
+.boton span{
+    position: absolute;
+    display: block;
+}
+
+/*arriba*/
+.boton span:nth-child(1){
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #2196f3);
+}
+
+.boton:hover span:nth-child(1){
+    left: 100%;
+    transition: 1s;
+}
+
+/*abajo*/
+.boton span:nth-child(3){
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #2196f3);
+}
+
+.boton:hover span:nth-child(3){
+    right: 100%;
+    transition: 1s;
+    transition-delay: 0.5s;
+}
+
+/*derecha*/
+.boton span:nth-child(2){
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #2196f3);
+}
+
+.boton:hover span:nth-child(2){
+    top: 100%;
+    transition: 1s;
+    transition-delay: 0.25s;
+}
+
+/*izquierda*/
+.boton span:nth-child(4){
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #2196f3);
+}
+
+.boton:hover span:nth-child(4){
+    bottom: 100%;
+    transition: 1s;
+    transition-delay: 0.75s;
 }
