Nuevas vistas y CSSs (y un metodo viejo mio que no llegue a comitiar)
Vistas nuevas de lucre con sus respectivos CSS
Y un metodo de theater que no habia comiteado

--- a/views/css/showAdminMainStyle.css
+++ b/views/css/showAdminMainStyle.css
@@ -4,21 +4,21 @@
 }
 
 body {
-    background: #012714fd;
+    background-image: url("../img/fondoNeon1.jpg");
     background-size: 100%;
     background-attachment: fixed;
 }
 
 table {
     text-align: center;
-    width:800px;
-	height: 500px;
-    margin: 80px 500px 90px 300px;
+    width:700px;
+	height: auto;
+    margin: 80px 500px 50px 300px;
     background-color: rgba(255,255,255,0.2);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border: 10px double rgba(0, 0, 0, 0.2);
     transition-delay: 1s;
-    box-shadow: 0 0 10px #21f3338f, 0 0 40px #21f3338f, 0 0 80px #21f3338f, 0 0 120px #21f3338f;
+    box-shadow: 0 0 10px #2195f3d2, 0 0 40px #2195f3d2, 0 0 80px #2195f3d2, 0 0 120px #f321d7d2;
 }
 
 table img {
@@ -42,7 +42,115 @@ td {
 
 td:hover {
     transition: color 0.8s linear 0.2s;
-    color: limegreen;
+    color: #2195f3d2;
+}
+
+table .image {
+    background: none;
+    margin: 10px;
+    display: inline-block;
+    color: #2b96eed2;
+    overflow: hidden;
+    transition: 0.2s;
+    border: none;
+    font-weight: bold;
+    padding: 0px;
+}
+
+table .image:hover{
+
+    box-shadow: 0 0 10px #2b96eed2, 0 0 40px #2b96eed2, 0 0 80px #2b96eed2, 0 0 120px #2b96eed2;
+}
+
+
+
+/*boton*/
+
+.add{
+    position: relative;
+    display: inline-block;
+    color: #2195f3d2;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    text-decoration: none;
+    font-size: 25px;
+    overflow: hidden;
+    transition: 0.2s;
+    margin: 0px 150px 10px 550px;
+    padding: 10px;
+    border:  2px solid rgba(0, 0, 0, 0.2);
+}
+
+.add:hover{
+    color: #000000;
+    background: #1869acd2; 
+    transition-delay: 1s;
+    box-shadow: 0 0 10px #2b96eed2, 0 0 40px #2b96eed2, 0 0 80px #2b96eed2, 0 0 120px #2b96eed2;
+}
+
+
+.add span{
+    position: absolute;
+    display: block;
+}
+
+/*arriba*/
+.add span:nth-child(1){
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #2b96eed2);
+}
+
+.add:hover span:nth-child(1){
+    left: 100%;
+    transition: 1s;
+}
+
+/*abajo*/
+.add span:nth-child(3){
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #2b96eed2);
+}
+
+.add:hover span:nth-child(3){
+    right: 100%;
+    transition: 1s;
+    transition-delay: 0.5s;
+}
+
+/*derecha*/
+.add span:nth-child(2){
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #2b96eed2);
+}
+
+.add:hover span:nth-child(2){
+    top: 100%;
+    transition: 1s;
+    transition-delay: 0.25s;
+}
+
+/*izquierda*/
+.add span:nth-child(4){
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #2b96eed2);
+}
+
+.add:hover span:nth-child(4){
+    bottom: 100%;
+    transition: 1s;
+    transition-delay: 0.75s;
 }
 
 
