--- a/views/css/showChooseMovieCinemasFormStyle.css
+++ b/views/css/showChooseMovieCinemasFormStyle.css
@@ -14,8 +14,8 @@ h2{
     text-align: center;
     float: center;
     width:600px;
-	height: 500px;
-	margin: 80px 500px 200px 400px;
+	height: auto;
+	margin: 140px 500px 200px 400px;
 	padding: 30px;
     background-color: rgba(255,255,255,0.2);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
