--- a/views/css/generalStyle.css
+++ b/views/css/generalStyle.css
@@ -2,44 +2,138 @@
 	margin: 0;
 	padding: 0;
 }
-
 body {
-    background-image: url('../img/fondo2.jpg');
+    background-color: rgb(34, 35, 82);
     background-size: 100%;
+    background-attachment: fixed;
 }
+
 
 .form {
     text-align: center;
     float: center;
-    width:500px;
-	height: 400px;
-	margin: 200px 500px 200px 400px;
+    width:600px;
+	height: auto;
+	margin: 100px 500px 200px 400px;
 	padding: 30px;
     background-color: rgba(255,255,255,0.2);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border: 10px double rgba(0, 0, 0, 0.2);
+    color: #000000;
+    transition-delay: 1s;
+    box-shadow: 0 0 10px #2195f3d2, 0 0 40px #2195f3d2, 0 0 80px #2195f3d2, 0 0 120px #f321d7d2;
 }
 
-label {
-    font-size: 30px !important; 
+
+.form label {
+    font-size: 60px !important; 
     font-weight: bold;
-}
-
-input {
+    color: #000000;
+    display: block;
+    font-family: 'Courier New', Courier, monospace;
     margin: 10px;
-    width:400px;
-    font-size: 150%;
+    color: #000000;
+    transition-delay: 1s;
+    box-shadow: 0 0 20px #2195f3d2, 0 0 40px #f321d7d2;
 }
 
-button {
-	padding: 2%;
-    background-color: rgba(255, 255, 255, 0.048);
-    border: 5px solid rgba(0, 0, 0, 0.5);
+.form input {
+    margin-bottom: 20px;
+    font-size: 25px;
+    background: #124d7ed2;
+}
+
+
+
+/*button*/
+
+.boton {
+   
+    position: relative;
+    display: inline-block;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    text-decoration: none;
+    overflow: hidden;
+    transition: 0.2s;
+    background: #000;
+    border: none;
     font-size: 30px !important; 
     font-weight: bold;
+    padding: 2%;
 }
 
-button:hover{
-    background: #3b32325b;
+.boton:hover{
+    color: #00aeffd2;
+    background: #000000;
+    transition-delay: 1s;
+    box-shadow: 0 0 10px #00aeffd2, 0 0 40px #00aeffd2, 0 0 80px #00aeffd2, 0 0 120px #00aeffd2;
 }
+
+
+.boton span{
+    position: absolute;
+    display: block;
+}
+
+/*arriba*/
+.boton span:nth-child(1){
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #00aeffd2);
+}
+
+.boton:hover span:nth-child(1){
+    left: 100%;
+    transition: 1s;
+}
+
+/*abajo*/
+.boton span:nth-child(3){
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #00aeffd2);
+}
+
+.boton:hover span:nth-child(3){
+    right: 100%;
+    transition: 1s;
+    transition-delay: 0.5s;
+}
+
+/*derecha*/
+.boton span:nth-child(2){
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #00aeffd2);
+}
+
+.boton:hover span:nth-child(2){
+    top: 100%;
+    transition: 1s;
+    transition-delay: 0.25s;
+}
+
+/*izquierda*/
+.boton span:nth-child(4){
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #00aeffd2);
+}
+
+.boton:hover span:nth-child(4){
+    bottom: 100%;
+    transition: 1s;
+    transition-delay: 0.75s;
+}
+
 
